--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Om oss - Klarhet</title>
+    <title>Om oss - KLARHET</title>
     <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -17,7 +17,7 @@
     <!-- Navbar - About us -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för klarhet" title="Gå till startsidan" /></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för KLARHET" title="Gå till startsidan" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Öppna meny">
           Meny
           <i class="fas fa-bars ms-1" aria-hidden="true"></i>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item"><a class="nav-link" href="index.html" title="Länk till startsidan">Hem</a></li>
-            <li class="nav-item"><a class="nav-link" href="aboutCompany.html" title="Länk till om klarhet">Om Klarhet</a></li>
+            <li class="nav-item"><a class="nav-link" href="aboutCompany.html" title="Länk till om KLARHET">Om KLARHET</a></li>
             <li class="nav-item"><a class="nav-link" href="organisation.html" title="Länk till organisation">Organisation</a></li>
             <li class="nav-item"><a class="nav-link" href="human.html" title="Länk till människa och sinne">Människa och sinne</a></li>
           </ul>
@@ -43,12 +43,12 @@
             <div class="row justify-content-center ij-section__content">
               <div>
                 <p>
-                  Välkommen till Klarhet!
+                  Välkommen till KLARHET!
                   <br />
                   <br />
                   Vi är här för att hjälpa dig på din resa mot välmående och balans.
                   <br />
-                  Vår passion är att guida dig till ett liv där du lever fullt ut, med klarhet och autenticitet. Klarhet grundades av Anna och Katarina med en vision om att främja hälsa och välbefinnande på ett holistiskt sätt. Vi kombinerar vår erfarenhet inom sjukvård, beteendevetenskap och ledarskap för att erbjuda skräddarsydda tjänster som passar just dig och dina behov.
+                  Vår passion är att guida dig till ett liv där du lever fullt ut, med KLARHET och autenticitet. KLARHET grundades av Anna och Katarina med en vision om att främja hälsa och välbefinnande på ett holistiskt sätt. Vi kombinerar vår erfarenhet inom sjukvård, beteendevetenskap och ledarskap för att erbjuda skräddarsydda tjänster som passar just dig och dina behov.
                   <br />
                   <br />
                   Vi tror på kraften i samtal, självreflektion och personlig utveckling. Genom att lyssna på din kropp, ditt sinne och dina känslor kan vi tillsammans skapa förändring och vägleda dig till ett liv i balans och harmoni. Oavsett var du är på din resa, är du välkommen att utforska våra tjänster och ta det första steget mot en klarare och mer meningsfull tillvaro.
@@ -77,7 +77,7 @@
             </div>
             <div class="links links-beige">
               <a class="btn btn-dark btn-social mx-2" href="mailto:katarina@clearity.nu" aria-label="Mail till Katarina"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
-              <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-calendar-days" aria-hidden="true"></i> </a>
+              <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-calendar-days" aria-hidden="true"></i> </a>
               <a class="btn btn-dark btn-social mx-2" href="tel:0732629095" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-phone" aria-hidden="true"></i> </a>
             </div>
           </div>
@@ -106,7 +106,7 @@
             </div>
             <div class="links">
               <a class="btn btn-dark btn-social mx-2" href="mailto:anna@clearity.nu" aria-label="Mail till Anna"><i class="fa-solid fa-envelope" aria-hidden="true"></i></a>
-              <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" aria-label="Länk till Anna på bokadirekt"><i class="fa-solid fa-calendar-days" aria-hidden="true"></i> </a>
+              <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" aria-label="Länk till Anna på bokadirekt"><i class="fa-solid fa-calendar-days" aria-hidden="true"></i> </a>
               <a class="btn btn-dark btn-social mx-2" href="tel:0709642002" aria-label="Länk till Katarina på bokadirekt"><i class="fa-solid fa-phone" aria-hidden="true"></i> </a>
             </div>
           </div>
@@ -141,7 +141,7 @@
             <div class="ij-footer__icons">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                  <a href="https://www.facebook.com/61556650899833/"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok" aria-hidden="true"></i></a>
