--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Klarhet</title>
+    <title>KLARHET</title>
     <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -19,7 +19,7 @@
     <!-- Navbar - Starpage -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för klarhet" title="Gå till startsidan" /></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för KLARHET" title="Gå till startsidan" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Öppna meny">
           Meny
           <i class="fas fa-bars ms-1" aria-hidden="true"></i>
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item"><a class="nav-link active" href="index.html" title="Länk till startsidan">Hem</a></li>
-            <li class="nav-item"><a class="nav-link" href="aboutCompany.html" title="Länk till om klarhet">Om Klarhet</a></li>
+            <li class="nav-item"><a class="nav-link" href="aboutCompany.html" title="Länk till om KLARHET">Om KLARHET</a></li>
             <li class="nav-item"><a class="nav-link" href="organisation.html" title="Länk till organisation">Organisation</a></li>
             <li class="nav-item"><a class="nav-link" href="human.html" title="Länk till människa och sinne">Människa och sinne</a></li>
           </ul>
@@ -116,7 +116,7 @@
                 <div class="round-image-container">
                   <img src="assets/img/anna.png" alt="En bild på Anna" />
                 </div>
-                <a href="aboutUs.html#section3">Anna</a>
+                <a href="aboutUs.html#section-anna">Anna</a>
               </div>
             </div>
             <div class="col-lg-4">
@@ -124,7 +124,7 @@
                 <div class="round-image-container">
                   <img src="assets/img/katarina.png" alt="En bild på Katarina" />
                 </div>
-                <a href="aboutUs.html#section2">Katarina</a>
+                <a href="aboutUs.html#section-katarina">Katarina</a>
               </div>
             </div>
           </div>
@@ -160,14 +160,14 @@
                   <div>
                     <h3 class="card-title">Self Love</h3>
                     <p class="card-text">
-                      Börja med dig själv.
+                      Börja med dig själv
                       <br />
                       <i>Autensitet, sanning och värme</i>
                     </p>
                   </div>
                   <div class="card-links">
                     <a class="link" href="selfLove.html">Läs mer om self love</a>
-                    <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
+                    <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
               </div>
@@ -186,7 +186,7 @@
                   </div>
                   <div class="card-links">
                     <a class="link" href="search.html">Läs mer om leta</a>
-                    <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
+                    <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
               </div>
@@ -198,14 +198,14 @@
                   <div>
                     <h3 class="card-title">Leva</h3>
                     <p class="card-text">
-                      Livet ska levas och inte bara överlevas.
+                      Livet ska levas och inte bara överlevas
                       <br />
-                      <i>Styrka, stabilitet och självtillit.</i>
+                      <i>Styrka, stabilitet och självkänsla</i>
                     </p>
                   </div>
                   <div class="card-links">
                     <a class="link" href="live.html">Läs mer om leva</a>
-                    <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
+                    <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
               </div>
@@ -219,14 +219,14 @@
                   <div>
                     <h3 class="card-title">Lyssna</h3>
                     <p class="card-text">
-                      Kroppens signaler. Så påverkar du din hälsa.
+                      Kroppens signaler, så påverkar du din hälsa
                       <br />
                       <i>Soul, body and mind</i>
                     </p>
                   </div>
                   <div class="card-links">
                     <a class="link" href="listen.html">Läs mer om lyssna</a>
-                    <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" class="btn btn-primary" target="_blank">Boka</a>
+                    <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
               </div>
@@ -258,12 +258,13 @@
                     <h3 class="card-title">Längtan</h3>
                     <p class="card-text">
                       Vad önskar du?
+                      <br>
                       <i>Drömmar, kärlek och relationer</i>
                     </p>
                   </div>
                   <div class="card-links">
                     <a class="link" href="longing.html">Läs mer om längtan</a>
-                    <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
+                    <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
               </div>
@@ -281,7 +282,7 @@
                   </div>
                   <div class="card-links">
                     <a class="link" href="play.html">Läs mer om leka</a>
-                    <a href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
+                    <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
               </div>
@@ -315,7 +316,7 @@
             <div class="ij-footer__icons">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                  <a href="https://www.facebook.com/61556650899833/"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok" aria-hidden="true"></i></a>
