--- a/leadership.html
+++ b/leadership.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ledarskap - Klarhet</title>
+    <title>Ledarskap - KLARHET</title>
     <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -17,7 +17,7 @@
     <!-- Navbar - Leadership -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för klarhet" title="Gå till startsidan" /></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för KLARHET" title="Gå till startsidan" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Öppna meny">
           Meny
           <i class="fas fa-bars ms-1" aria-hidden="true"></i>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item"><a class="nav-link" href="index.html" title="Länk till startsidan">Hem</a></li>
-            <li class="nav-item"><a class="nav-link" href="aboutCompany.html" title="Länk till om klarhet">Om Klarhet</a></li>
+            <li class="nav-item"><a class="nav-link" href="aboutCompany.html" title="Länk till om KLARHET">Om KLARHET</a></li>
             <li class="nav-item"><a class="nav-link" href="organisation.html" title="Länk till organisation">Organisation</a></li>
             <li class="nav-item"><a class="nav-link" href="human.html" title="Länk till människa och sinne">Människa och sinne</a></li>
           </ul>
@@ -47,20 +47,20 @@
                 </p>
               </div>
               <p>
-               <b>Ledarskapsutbildning med Katarina</b>
-               <br>
-               •	Bli din egen ledare, utveckla ett gott självledarskap
-               <br>
-               •	Leder du din organisation så som du önskar?
-               <br>
-               •	Kultur för framgångsrika organisationer
-               <br>
-               •	Ledningsgrupps- och grupputveckling
-               <br>
-               •	Goda resultat, tillsammans, på vilket sätt?
-               <br>
-               <br>
-               Läs mer under organisation för att ta del av hela vårt utbud. 
+                <b>Ledarskapsutbildning med Katarina</b>
+                <br />
+                • Bli din egen ledare, utveckla ett gott självledarskap
+                <br />
+                • Leder du din organisation så som du önskar?
+                <br />
+                • Kultur för framgångsrika organisationer
+                <br />
+                • Ledningsgrupps- och grupputveckling
+                <br />
+                • Goda resultat, tillsammans, på vilket sätt?
+                <br />
+                <br />
+                Läs mer under organisation för att ta del av hela vårt utbud.
               </p>
               <div class="link">
                 <a class="btn btn-dark btn-social mx-2" href="mailto:katarina@clearity.nu" aria-label="Länk till Katarinas mail">Boka</a>
@@ -95,7 +95,7 @@
             <div class="ij-footer__icons">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                  <a href="https://www.facebook.com/61556650899833/"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok" aria-hidden="true"></i></a>
