--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Villkor - Klarhet</title>
+    <title>Villkor - KLARHET</title>
     <link rel="icon" href="assets/favicon_io (3)/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -17,7 +17,7 @@
     <!-- Navbar - Terms -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för klarhet" title="Gå till startsidan" /></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/img/logotype.png" alt="Logotyp för KLARHET" title="Gå till startsidan" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Öppna meny">
           Meny
           <i class="fas fa-bars ms-1" aria-hidden="true"></i>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item"><a class="nav-link" href="index.html" title="Länk till startsidan">Hem</a></li>
-            <li class="nav-item"><a class="nav-link" href="aboutCompany.html" title="Länk till om klarhet">Om Klarhet</a></li>
+            <li class="nav-item"><a class="nav-link" href="aboutCompany.html" title="Länk till om KLARHET">Om KLARHET</a></li>
             <li class="nav-item"><a class="nav-link" href="organisation.html" title="Länk till organisation">Organisation</a></li>
             <li class="nav-item"><a class="nav-link" href="human.html" title="Länk till människa och sinne">Människa och sinne</a></li>
           </ul>
@@ -43,14 +43,12 @@
             <div class="row justify-content-center ij-section__content">
               <div>
                 <p>
-                  Klarhet behandlar uppgifter om din e-postadress för att kunna skicka månadsbrev till dig. Dina personuppgifter lämnas inte ut till någon annan och alla uppgifter stannar inom EU/EES.
-                  <br>
-                  <br>
-                  All personuppgiftsbehandling sker inom klarhets verksamhet. 
-                  Det innebär att endast vissa bestämmelser i personuppgiftslagstiftningen gäller för behandlingen, t.ex. reglerna som rör säkerhet för personuppgifter. 
-                  Vi gör alltid vårt yttersta för att skydda de personuppgifter vi behandlar genom adekvata säkerhetsåtgärder.
-                  <br>
-                  <br>
+                  KLARHET behandlar uppgifter om din e-postadress för att kunna skicka månadsbrev till dig. Dina personuppgifter lämnas inte ut till någon annan och alla uppgifter stannar inom EU/EES.
+                  <br />
+                  <br />
+                  All personuppgiftsbehandling sker inom KLARHETs verksamhet. Det innebär att endast vissa bestämmelser i personuppgiftslagstiftningen gäller för behandlingen, t.ex. reglerna som rör säkerhet för personuppgifter. Vi gör alltid vårt yttersta för att skydda de personuppgifter vi behandlar genom adekvata säkerhetsåtgärder.
+                  <br />
+                  <br />
                   Har du frågor om dina personuppgifter kontakta oss på <a href="mailto:info@clearity.nu">info@clearity.nu</a>.
                 </p>
               </div>
@@ -84,7 +82,7 @@
             <div class="ij-footer__icons">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/clearity.nu"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="https://www.facebook.com/61556650899833/"><i class="fa-brands fa-facebook-f"></i></a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/@clearity.nu?_t=8jw1NCRtPX6&_r=1&fbclid=IwAR0RVYmhcFuof7j0UXz4vbDcd4P0S6qbmnl38mrgJmGWX7Fdz492Q71YdN4"><i class="bi bi-tiktok"></i></a>
