--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="col-md-6 ij-col6">
               <img src="assets/img/leadership.webp" alt="Ledarskap - En bild på en grupp människor" loading="lazy" />
               <h2 class="textDownMiddle">Ledarskap</h2>
-              <a href="#ij-card4" class="link"></a>
+              <a href="#ij-card6" class="link"></a>
             </div>
             <div class="col-md-6 ij-col6">
               <img src="assets/img/listen.webp" alt="Lyssna - En bild på en kvinna" loading="lazy" />
@@ -88,7 +88,7 @@
             <div class="col-md-4 ij-col4">
               <img src="assets/img/live.webp" alt="Leva - En bild på en man i en solnedgång" loading="lazy" />
               <h2 class="textDownRight">Leva</h2>
-              <a href="#ij-card6" class="link"></a>
+              <a href="#ij-card4" class="link"></a>
             </div>
             <div class="col-md-4 ij-col4">
               <img src="assets/img/longing.webp" alt="Längtan - En bild på en hand i en solnedgång" loading="lazy" />
@@ -107,7 +107,7 @@
       <section id="ij-aboutUs-startpage" class="backgroundWhite">
         <div class="container-fluid ij-section">
           <div class="ij-section__heading">
-            <h2><a href="about.html">Om oss</a></h2>
+            <h2><a href="aboutUs.html">Om oss</a></h2>
             <p><i>Vi är här för att hjälpa dig på din resa mot välmående och balans.</i></p>
           </div>
           <div class="row justify-content-center">
