--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <div>
                     <h3 class="card-title">Lära</h3>
                     <p class="card-text">
-                      Kunskapskälla & Utbildningar
+                      Kunskapskälla & Utbildningar.
                       <br />
                       <i>Nu börjar resan för resten av ditt liv</i>
                     </p>
@@ -160,7 +160,7 @@
                   <div>
                     <h3 class="card-title">Self Love</h3>
                     <p class="card-text">
-                      Börja med dig själv
+                      Börja med dig själv.
                       <br />
                       <i>Autensitet, sanning och värme</i>
                     </p>
@@ -198,7 +198,7 @@
                   <div>
                     <h3 class="card-title">Leva</h3>
                     <p class="card-text">
-                      Livet ska levas och inte bara överlevas
+                      Livet ska levas och inte bara överlevas.
                       <br />
                       <i>Styrka, stabilitet och självkänsla</i>
                     </p>
@@ -219,7 +219,7 @@
                   <div>
                     <h3 class="card-title">Lyssna</h3>
                     <p class="card-text">
-                      Kroppens signaler, så påverkar du din hälsa
+                      Kroppens signaler, så påverkar du din hälsa.
                       <br />
                       <i>Soul, body and mind</i>
                     </p>
