--- a/leadership.html
+++ b/leadership.html
@@ -41,13 +41,13 @@
               <div>
                 <h1>Ledarskap</h1>
                 <p class="card-text">
-                  Autensitet, tillsammansskap och resultat. Når du de resultat du önskar?
+                  Att framgångsrikt leda, aktivt medarbetarskap, grupp och individ.  
                   <br />
-                  <i>Framgång, ledarskap, medarbetarskap, grupp och individ</i>
+                  <i>Autensitet, tillsammansskap och resultat </i>
                 </p>
               </div>
               <p>
-                <b>Ledarskapsutbildning med Katarina</b>
+                <b>Ledarskapsutbildning</b>
                 <br />
                 • Bli din egen ledare, utveckla ett gott självledarskap
                 <br />
