--- a/listen.html
+++ b/listen.html
@@ -47,7 +47,7 @@
                 </p>
               </div>
               <p>
-                <b>Webbaserat samtal med Anna</b>
+                <b>Samtal</b>
                 <br />
                 • Livsstilsguidning. Komplett kartläggning av kroppens signaler och livsstilsrelaterade åtgärden och mål.
                 <br />
