--- a/longing.html
+++ b/longing.html
@@ -47,30 +47,30 @@
                 </p>
               </div>
               <p>
-                <b>Samtal med Katarina. Individuellt eller i par. Även i relation förälder, barn.</b>
+                <b>Samtal. Individuellt eller i par. Även i relation förälder, barn.</b>
                 <br />
                 • Vågar du drömma stort?
                 <br />
                 • Vi bygger kommunikativa broar.
                 <br />
-                • Vem är du i mötet, hur vill du bli bemött.
+                • Vem är du i mötet, hur vill du bli bemött?
                 <br />
                 • Vi bygger förbundenhet, trygghet och värme i relationer.
                 <br />
                 Våra förhoppningar är att fördjupa dina relationer, ge vingar till dina drömmar och skapa ny förståelse för dig själv i förhållande till andra.
                 <br />
                 <br />
-                <b>2h Workshop med Anna</b>
+                <b>2h Workshop</b>
                 <br />
-                • Jag möter dig och din partner i ert hem.
+                • För dig och din partner.
                 <br />
-                • Flertalet övningar för att återfinna samspel, fördjupad förståelse och Reconnection.
+                • Flertalet övningar för att återfinna samspel, fördjupad förståelse och reconnection.
                 <br />
                 • Detta är ej en tantrisk workshop, utan vi jobbar utifrån en fördjupande emotionell connection.
               </p>
               <div class="link ij-db">
-                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarinas bokadirekt">Boka Katarina</a>
-                <a class="btn btn-dark btn-social mx-2" href="mailto:anna@clearity.nu" aria-label="Länk till Annas mail">Boka Anna</a>
+                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarinas bokadirekt">Boka samtal</a>
+                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5 " aria-label="Länk till Annas mail">Boka workshop</a>
               </div>
             </div>
           </div>
