--- a/play.html
+++ b/play.html
@@ -41,25 +41,36 @@
               <div>
                 <h1>Leka</h1>
                 <p class="card-text">
-                  Vart är jag på väg?
+                  Vågar du gå utanför din konfortzon?
                   <br />
-                  <i>Mod, hopp och riktning</i>
+                  <i>Meningsfullhet, insikter och kärlek till livet</i>
                 </p>
               </div>
               <p>
-                <b>Samtal med Katarina</b>
+                <b>Samtal</b>
                 <br />
-                • Hur balanserar vi krav och önskan?
+                • Att våga utmana dig själv.
                 <br />
-                • Vart är jag på väg, vart vill jag och vad är mina drivkrafter?
+                • Lev livet utan rädslor.
                 <br />
-                • Är jag på rätt plats i livet?
+                • Livslust, meningsfullhet, ork och tilltro.
                 <br />
                 <br />
-                Vår förhoppning är att du finner din väg och vågar ta ut din riktning. Modig och trygg i känslan att livet kan bli precis så bra som du önskar.
+                Vår förhoppning är att du vågar leva livet fullt ut.
+                <br />
+                <br>
+                <b>Teatrial workshops</b>
+                <br />
+                • Gå utanför din konfortzon.
+                <br />
+                • Agera istället för att reagera.
+                <br />
+                • Behåll ditt lugn
+                <br />
               </p>
-              <div class="link">
-                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarina på bokadirekt">Boka</a>
+              <div class="link ij-db">
+                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarinas bokadirekt">Boka samtal</a>
+                <a class="btn btn-dark btn-social mx-2" href="mailto:info@clearity.nu" aria-label="Länk till Annas mail">Boka workshop</a>
               </div>
             </div>
           </div>
