--- a/search.html
+++ b/search.html
@@ -47,7 +47,7 @@
                 </p>
               </div>
               <p>
-                <b>Samtal med Katarina</b>
+                <b>Samtal</b>
                 <br />
                 • Hur balanserar vi krav och önskan?
                 <br />
