--- a/selfLove.html
+++ b/selfLove.html
@@ -47,7 +47,7 @@
                 </p>
               </div>
               <p>
-                <b>Samtal med Katarina</b>
+                <b>Samtal</b>
                 <br />
                 • Vi finner svaren till vem du är när du står i ditt sanna jag.
                 <br />
