--- a/aboutUs.html
+++ b/aboutUs.html
@@ -43,15 +43,12 @@
             <div class="row justify-content-center ij-section__content">
               <div>
                 <p>
-                  Välkommen till KLARHET!
-                  <br />
-                  <br />
-                  Vi är här för att hjälpa dig på din resa mot välmående och balans.
-                  <br />
-                  Vår passion är att guida dig till ett liv där du lever fullt ut, med KLARHET och autenticitet. KLARHET grundades av Anna och Katarina med en vision om att främja hälsa och välbefinnande på ett holistiskt sätt. Vi kombinerar vår erfarenhet inom sjukvård, beteendevetenskap och ledarskap för att erbjuda skräddarsydda tjänster som passar just dig och dina behov.
-                  <br />
-                  <br />
-                  Vi tror på kraften i samtal, självreflektion och personlig utveckling. Genom att lyssna på din kropp, ditt sinne och dina känslor kan vi tillsammans skapa förändring och vägleda dig till ett liv i balans och harmoni. Oavsett var du är på din resa, är du välkommen att utforska våra tjänster och ta det första steget mot en klarare och mer meningsfull tillvaro.
+                  Vi är här för att hjälpa dig på din resa mot välmående och balans. 
+                  <br>
+                  Vår passion är att guida dig till ett liv där du lever fullt ut, med KLARHET och autenticitet. KLARHET grundades av oss Anna och Katarina med en vision om att främja hälsa och välbefinnande på ett holistiskt sätt. Vi kombinerar vår erfarenhet inom sjukvård, beteendevetenskap och ledarskap för att erbjuda skräddarsydda tjänster som passar just dig och dina behov. 
+                   <br>
+                   <br>
+                  Vi tror på kraften i samtal, självreflektion och personlig utveckling. Oavsett var du är på din resa, är du välkommen att utforska våra tjänster och ta det första steget mot en klarare och mer meningsfull tillvaro.
                 </p>
               </div>
             </div>
@@ -65,13 +62,16 @@
             <div>
               <h2>Katarina</h2>
               <p>
-                Jag har en bakgrund inom beteendevetenskap med psykologi som huvudämne. Jag har arbetat med och genom människor i hela mitt yrkesverksamma liv. Jag har haft som huvuduppdrag att leda, både människor, organisationer och samtal. Jag har jobbat med stöd till chefer och ledare, till grupper och faciliterat många samtal. För mig är dialog och kommunikation, både med mig själv och med andra den allra viktigaste framgångsfaktorn.
-                <br />
-                <br />
-                Framgång, vad är det för dig? För mig är det förbundenhet, att känna närhet, värme och autenticitet, i alla mina nära relationer. Jag har haft roller där jag både suttit i ledningsgrupper, haft egna ledningsgrupper samt även arbetat med ledningsgrupper i rollen som management konsult. Eftersom jag, i många år, har verkat i rollen som chef och ledare har jag lärt mig massor, både om vem jag är och hur jag vill vara som ledare och vad som fungerat och vad som fungerat mindre bra.
-                <br />
-                <br />
-                Viktigt för mig har varit att vi dels byter bilder och kommunicerar oss igenom det som är svårt och det som gör motstånd, dels att främja en kultur som kännetecknas av omtanke, värme och tillsammansskap.
+                Jag har en bakgrund inom beteendevetenskap med psykologi som huvudämne. 
+                Jag har arbetat med och genom människor i hela mitt yrkesverksamma liv. 
+                <br>
+                <br>
+                Jag har lång erfarenhet av att möta människor och via samtal komma vidare, framåt. Mitt huvuduppdrag har varit att leda, både människor, organisationer och samtal. 
+                Jag har jobbat med stöd till chefer och ledare, till grupper och faciliterat många samtal. 
+                För mig är reflektion och kommunikation den allra viktigaste framgångsfaktorn, likväl med dig själv som med andra.  
+                <br>
+                <br>
+                Framgång, vad är det för dig? För mig är det dels förbundenhet och autenticitet, dels är det att skapa goda resultat. 
               </p>
               <p>Kontakta mig</p>
             </div>
